--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=21w39a
-	yarn_mappings=21w39a+build.4
-	loader_version=0.11.7
+	minecraft_version=1.18-pre4
+	yarn_mappings=1.18-pre4+build.5
+	loader_version=0.12.5
 
 # Mod Properties
-	mod_version = 1.0.3
+	mod_version = 1.0.4
 	maven_group = com.yurisuika.catherine
 	archives_base_name = catherine
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.40.5+1.18
+	fabric_version=0.42.7+1.18
