--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.18-pre4
-	yarn_mappings=1.18-pre4+build.5
+	minecraft_version=1.18-rc3
+	yarn_mappings=1.18-rc3+build.1
 	loader_version=0.12.5
 
 # Mod Properties
-	mod_version = 1.1.0
+	mod_version = 1.1.1
 	maven_group = com.yurisuika.catherine
 	archives_base_name = catherine
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.42.7+1.18
+	fabric_version=0.43.1+1.18
