--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.18
-	yarn_mappings=1.18+build.1
-	loader_version=0.12.8
+	minecraft_version=1.18.1
+	yarn_mappings=1.18.1+build.18
+	loader_version=0.12.12
 
 # Mod Properties
-	mod_version = 1.1.1
+	mod_version = 1.1.2
 	maven_group = com.yurisuika.catherine
-	archives_base_name = catherine
+	archives_base_name = catherine-seasons
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.44.0+1.18
+	fabric_version=0.45.2+1.18
