--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.jvmargs=-Xmx1G
 # Mod Properties
 	mod_version = 1.1.2
 	maven_group = com.yurisuika.catherine
-	archives_base_name = catherine-seasons
+	archives_base_name = catherine
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
