--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 minecraft {
-	accessWidener =  file("src/main/resources/catherine.accesswidener")
+	accessWidenerPath =  file("src/main/resources/catherine.accesswidener")
 }
 
 java {
