--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.1
+	minecraft_version=1.19_deep_dark_experimental_snapshot-1
+	yarn_mappings=1.19_deep_dark_experimental_snapshot-1+build.4
 	loader_version=0.13.3
 
 # Mod Properties
@@ -14,4 +14,4 @@ org.gradle.jvmargs=-Xmx1G
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.47.10+1.18.2
+	fabric_version=0.46.6+1.19-experimental
