--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.19_deep_dark_experimental_snapshot-1
-	yarn_mappings=1.19_deep_dark_experimental_snapshot-1+build.4
-	loader_version=0.13.3
+	minecraft_version = 1.19.3
+	yarn_mappings = 1.19.3+build.5
+	loader_version = 0.14.14
 
 # Mod Properties
 	mod_version = 1.1.5
@@ -14,4 +14,4 @@ org.gradle.jvmargs=-Xmx1G
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.46.6+1.19-experimental
+	fabric_version = 0.74.0+1.19.3
